--- a/Client/Pages/Settings.razor
+++ b/Client/Pages/Settings.razor
@@ -264,17 +264,17 @@
         </RadzenCard>
         @if(_isCoach)
         {
-            <RadzenCard Class="settings-main-container-cild" Style="border-radius: 18px;">
+            <RadzenCard Class="settings-main-container-cild" Style="border-radius: 18px; min-width: 680px; max-width: 680px;">
                 <p>You are a coach</p>
             </RadzenCard>
 
         }
         else if(this._userInformation.TeamID == 0)
         {
-            <RadzenCard Class="settings-main-container-cild" Style="border-radius: 18px;">
-                <RadzenStack Orientation="Orientation.Horizontal">
-                    <p>Want to become a coach? Sign Up Here</p>
-                    <RadzenButton Text="Sign up" ButtonStyle="ButtonStyle.Secondary" Click="StartCoachesRegistration"/>
+            <RadzenCard Class="settings-main-container-cild" Style="border-radius: 18px; min-width: 680px; max-width: 680px;">
+                <RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" JustifyContent="JustifyContent.Center">
+                    <h4 style="margin-block-end: 0;">Want to become a coach? Sign Up Here</h4>
+                    <RadzenButton Text="Sign up" ButtonStyle="ButtonStyle.Primary" Click="StartCoachesRegistration"/>
                 </RadzenStack>
             </RadzenCard>
         }
@@ -335,6 +335,9 @@ else
             if(userInfoRequest.IsSuccessStatusCode)
             {
                 this._userInformation = await userInfoRequest.Content.ReadFromJsonAsync<UserInformation>();
+
+                
+                
 
                 //Check user info to see if they are apart of a team
                 if(_userInformation.TeamID != 0 | _userInformation.TeamID != null)
