--- a/Client/wwwroot/css/general.css
+++ b/Client/wwwroot/css/general.css
@@ -1,3 +1,8 @@
+:root{
+    --border-base: #e5e9f0;
+    --link: #007bff;
+}
+
 .header-subtext{
     
     text-align: center;
@@ -22,7 +27,7 @@
     display: block;
     height: 1px;
     border: 0;
-    border-top: 1px solid #ccc;
+    border-top: 1px solid --border-base;
     margin: 1em 0;
     padding: 0;
 }
