--- a/Client/Shared/NavMenu.razor
+++ b/Client/Shared/NavMenu.razor
@@ -11,31 +11,40 @@
 
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Dashboard" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Coaches-Hub" Match="NavLinkMatch.All">
-                <span class="oi oi-people" aria-hidden="true"></span> Coaches Hub
-            </NavLink>
-        </div>
+        @if(this._userRole.Equals("Member"))
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Dashboard" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Settings" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Workouts
+                </NavLink>
+            </div>
+        }
+        else if (this._userRole.Equals("Coach"))
+        {
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Coaches-Dashboard" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="Workout-Builder">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Workout Builder
+                </NavLink>
+            </div>
+        }
+
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="Settings">
                 <span class="oi oi-plus" aria-hidden="true"></span> Settings
             </NavLink>
         </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Workout-Builder">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Workout Builder
-            </NavLink>
-        </div>
+       
+       
     </nav>
 </div>
 
@@ -52,15 +61,16 @@
         //Get user permission state
         try
         {
-            var response = await Http.GetAsync("api/User/user-role");
-            if (response.IsSuccessStatusCode)
+            var userRoleResponse = await Http.GetAsync("api/User/user-role");
+            if (userRoleResponse.IsSuccessStatusCode)
             {
-                this._userRole = await response.Content.ReadAsStringAsync();
+                this._userRole = await userRoleResponse.Content.ReadAsStringAsync();
             }
         }
         catch (Exception ex)
         {
             Console.WriteLine("Error in getting permission state : " + ex);
+
         }
 
         await base.OnInitializedAsync();
