--- a/Client/wwwroot/css/Register.css
+++ b/Client/wwwroot/css/Register.css
@@ -16,26 +16,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
+    align-items: center;
 
     row-gap: 40px;
 }
 
-    .register-step-1 h2 {
-        font-weight: 550;
-    }
-    .register-step-1 p {
-        font-size: 1.1rem;
-        font-weight: 300;
-    }
-    .register-step-1 a{
-        color: var(--link) !important;
-        font-weight: 500;
-    }
-    .register-step-1 a:hover{
-        text-decoration: underline !important;
-        cursor: pointer;
-    }
+  
 
     .register-step-1-content{
         border: var(--border-base) 1px solid;
